feat: support auto create policy doc and add more test cases